force-app/main/default/objects/Account/fields/Current_Availability__c.field-meta.xml
<CustomField>
    <fullName>Current_Availability__c</fullName>
    <label>Current Availability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>