force-app/main/default/objects/Account/fields/Licensed_Availability__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Availability__c</fullName>
    <inlineHelpText>How many foster children is this provider licensed to host?</inlineHelpText>
    <label>Licensed Availability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>