force-app/main/default/objects/Account/fields/Maximum_Availability__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Availability__c</fullName>
    <label>Maximum Availability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>