force-app/main/default/objects/Account/fields/Preferred_Availability__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Availability__c</fullName>
    <inlineHelpText>What is the maximum number of foster children this provider would prefer to host?</inlineHelpText>
    <label>Preferred Availability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>