force-app/main/default/objects/Account/fields/RespiteDistance__c.field-meta.xml
<CustomField>
    <fullName>RespiteDistance__c</fullName>
    <label>RespiteDistance</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>