force-app/main/default/objects/Account/fields/vlocity_ps__CustomerValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CustomerValue__c</fullName>
    <description>A ranking of the value of this customer to your business expressed in marketing terms such as Gold, Silver, Bronze, Diamond, Platinum.</description>
    <label>Customer Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>