force-app/main/default/objects/Account/fields/vlocity_ps__DateFounded__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DateFounded__c</fullName>
    <description>For accounts that are companies, the date when the company was founded.</description>
    <label>Date Founded</label>
    <type>Date</type>
</CustomField>