force-app/main/default/objects/Account/fields/vlocity_ps__Language__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Language__c</fullName>
    <label>Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>