force-app/main/default/objects/Account/fields/vlocity_ps__LocationsServed__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LocationsServed__c</fullName>
    <label>Regions Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alameda, CA</fullName>
            </value>
            <value>
                <fullName>San Mateo, CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>