force-app/main/default/objects/Account/fields/vlocity_ps__ReferredByContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ReferredByContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the contact who referred this account.</description>
    <label>Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Referred By)</relationshipLabel>
    <relationshipName>ReferredAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>