force-app/main/default/objects/Account/fields/vlocity_ps__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Status__c</fullName>
    <description>The status of the customer&apos;s account such as active, inactive, suspended, pending or expired.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>