force-app/main/default/objects/Account/fields/Willing_to_Adopt__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Adopt__c</fullName>
    <label>Willing to Adopt?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>