force-app/main/default/objects/Account/fields/Would_Consider__c.field-meta.xml
<CustomField>
    <fullName>Would_Consider__c</fullName>
    <label>Would Consider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Foster_Considerations</valueSetName>
    </valueSet>
</CustomField>