force-app/main/default/objects/Account/fields/X1_yr_experience__c.field-meta.xml
<CustomField>
    <fullName>X1_yr_experience__c</fullName>
    <description>Does this provider have more than one year of experience?</description>
    <inlineHelpText>Does this provider have more than one year of experience?</inlineHelpText>
    <label>&gt; 1 yr experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>