force-app/main/default/objects/Account/recordTypes/Child_Care_Service_Provider.recordType-meta.xml
<RecordType>
    <fullName>Child_Care_Service_Provider</fullName>
    <active>true</active>
    <label>Child Care Service Provider</label>
</RecordType>