force-app/main/default/objects/Account/recordTypes/Foster_Care_Home_Provider.recordType-meta.xml
<RecordType>
    <fullName>Foster_Care_Home_Provider</fullName>
    <active>true</active>
    <label>Foster Care Home Provider</label>
</RecordType>