force-app/main/default/objects/Account/recordTypes/Respite_Center.recordType-meta.xml
<RecordType>
    <fullName>Respite_Center</fullName>
    <active>true</active>
    <label>Respite Center</label>
</RecordType>