force-app/main/default/objects/Account/recordTypes/vlocity_ps__Default.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Default</fullName>
    <active>true</active>
    <description>This is the default Account record type</description>
    <label>Default</label>
</RecordType>