force-app/main/default/objects/Account/recordTypes/vlocity_ps__ServiceProvider.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__ServiceProvider</fullName>
    <active>true</active>
    <description>Service Provider is a new record type of Account</description>
    <label>Service Provider</label>
</RecordType>