force-app/main/default/objects/Account/listViews/Foster_Care_Homes.listView-meta.xml
<ListView>
    <fullName>Foster_Care_Homes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>vlocity_ps__PrimaryContactId__c</columns>
    <columns>Licensed_Availability__c</columns>
    <columns>Preferred_Availability__c</columns>
    <columns>School_District__c</columns>
    <columns>X1_yr_experience__c</columns>
    <columns>Willing_to_Adopt__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Foster_Care_Home_Provider</value>
    </filters>
    <label>Foster Care Homes</label>
</ListView>