force-app/main/default/objects/Account/listViews/Respite_Centers.listView-meta.xml
<ListView>
    <fullName>Respite_Centers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>Maximum_Availability__c</columns>
    <columns>Current_Availability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Respite_Center</value>
    </filters>
    <label>Respite Centers</label>
</ListView>