force-app/main/default/objects/Account/listViews/Service_Providers.listView-meta.xml
<ListView>
    <fullName>Service_Providers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Licensed_Availability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Child Care Service Provider</value>
    </filters>
    <label>Child Care Service Providers</label>
</ListView>