force-app/main/default/objects/Account/listViews/vlocity_ps__ServiceProviders.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__ServiceProviders</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Service Provider</value>
    </filters>
    <label>Service Providers</label>
</ListView>